create error message when no video file is found

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="ingredients_label">Ingredients</string>
     <string name="preparation_label">Preparation</string>
     <string name="preparation_steps_label">Step</string>
+    <string name="no_video_message">This step does not contain video</string>
 </resources>
